--- a/src/app/components/users/user-table/user-table.component.html
+++ b/src/app/components/users/user-table/user-table.component.html
@@ -33,10 +33,20 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Acciones</th>
       <td mat-cell *matCellDef="let user">
-        <button mat-icon-button color="primary" aria-label="Editar usuario">
+        <button
+          mat-icon-button
+          color="primary"
+          [routerLink]="['/users/edit', user.id]"
+          aria-label="Editar usuario"
+        >
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button color="warn" aria-label="Eliminar usuario">
+        <button
+          mat-icon-button
+          color="warn"
+          (click)="deleteUser(user.id)"
+          aria-label="Eliminar usuario"
+        >
           <mat-icon>delete</mat-icon>
         </button>
       </td>
